RT-2, add authentification & authorization and refactor code

--- a/src/Replenishment.API/appsettings.Development.json
+++ b/src/Replenishment.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Uri": "https://localhost:5001"
+  },
+  "Solnet": {
+    "Cluster": "dev"
   }
 }
